--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,5 +3,5 @@ name: github-actions-consumer
 on: [push, workflow_dispatch]
 
 jobs:
-  call-reusable-workflow:
-    uses: thavaahariharangit/.github-private/.github/workflows/dependency-submission-resuable-workflow.yml@bc694a582317f78e8a5669ace8ae3846cc6c2824
+  token-required-workflow:
+    uses: dsp-testing/github-actions-consumer-public/.github/workflows/test.yml@v0.0.1
