--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,12 +4,12 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
-    # registries:
-    #   - github-octocat
+    registries:
+      - github-octocat
 
-# registries:
-#   github-octocat:
-#     type: git
-#     url: https://github.com
-#     username: x-access-token
-#     password: ${{secrets.MY_GITHUB_PERSONAL_TOKEN}}
+registries:
+  github-octocat:
+    type: git
+    url: https://github.com
+    username: x-access-token
+    password: ${{secrets.MY_GITHUB_WRONG_TOKEN}}
